syntax = "proto3";

package NAlice.NData.NOrder;

option go_package = "a.yandex-team.ru/alice/protos/data/scenario/order";
option java_package = "ru.yandex.alice.protos.data.scenario.order";

import "mapreduce/yt/interface/protos/extension.proto";

message TOrderStatusUserConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    bool HideItemNames = 1 [json_name = "hide_item_names", (NYT.column_name) = "hide_item_names"];
}
